# flask_tutorial

./: README.md  pyproject.toml  setup.py
flaskr/: __init__.py  auth.py  blog.py
flaskr/static/: style.css
flaskr/templates/blog/: index.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
