[tool.poetry]
name = "flask_tutorial"
version = "1.0.0"
description = "A simple blog project called Flaskr with an authentication section for user to register, log in, create posts, edit and delete their own posts"
authors = ["Ralph Santos Souza"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
pytest = "^7.1.2"
unittest = "^0.0"
psycopg2-binary = "^2.9.3"
pytest-coverage = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
